Experimenting with build file reduction :pray:
VERY RISKY DO NOT BE SURPRISED IF WE HAVE TO REVERT

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,7 +47,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.Nanite.ProjectEnabled=False
 r.NormalMapsForStaticLighting=False
-r.ForwardShading=False
+r.ForwardShading=True
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
