--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=788EA76C46E2D841AA87CE826FE72C73
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
