Build stuff no idea
hope it don't break nothing!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/GameLevel.GameLevel
 EditorStartupMap=/Game/Levels/GameLevel.GameLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
