--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -45,15 +45,18 @@ r.Shadow.Virtual.Enable=0
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
-r.Nanite.ProjectEnabled=False
+r.Nanite.ProjectEnabled=True
 r.NormalMapsForStaticLighting=False
-r.ForwardShading=True
+r.ForwardShading=False
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=False
 r.MSAACount=1
 r.AntiAliasingMethod=0
 r.ScreenPercentage.Default.Desktop.Mode=0
+r.VirtualTextures=False
+r.RayTracing=False
+r.AllowStaticLighting=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
