changing ide and other plugins

--- a/DayOfDespair.uproject
+++ b/DayOfDespair.uproject
@@ -114,6 +114,22 @@
 		{
 			"Name": "WebMMoviePlayer",
 			"Enabled": false
+		},
+		{
+			"Name": "IOSDeviceProfileSelector",
+			"Enabled": false
+		},
+		{
+			"Name": "OnlineSubsystemIOS",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"IOS",
+				"TVOS"
+			]
+		},
+		{
+			"Name": "N10XSourceCodeAccess",
+			"Enabled": false
 		}
 	]
 }
