--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,3 +88,20 @@ ManualIPAddress=
 [URL]
 GameName=DayOfDespair
 
+[/Script/ConcertClient.ConcertClientConfig]
+bIsHeadless=False
+bInstallEditorToolbarButton=True
+bAutoConnect=False
+bRetryAutoConnectOnError=False
+ServerType=Slate
+DefaultServerURL=
+DefaultSessionName=
+DefaultSessionToRestore=
+DefaultSaveSessionAs=
+ReadOnlyAssignment=(GameplayTags=)
+SendOnlyAssignment=(GameplayTags=)
+bShouldPromptForHotReloadOnLevel=False
+ClientSettings=(DisplayName="RobStorm",AvatarColor=(R=0.000000,G=0.500000,B=1.000000,A=1.000000),DesktopAvatarActorClass="/ConcertSyncClient/DesktopPresence.DesktopPresence_C",VRAvatarActorClass="/ConcertSyncClient/VRPresence.VRPresence_C",ServerPort=0,DiscoveryTimeoutSeconds=5,SessionTickFrequencySeconds=1,LatencyCompensationMs=0.000000,bReflectLevelEditorInGame=False,bSupportMixedBuildTypes=False,Tags=,ClientAuthenticationKey="")
+SourceControlSettings=(ValidationMode=Soft)
+EndpointSettings=(bEnableLogging=False,PurgeProcessedMessageDelaySeconds=30,RemoteEndpointTimeoutSeconds=60)
+
